--- a/scripts/template.html
+++ b/scripts/template.html
@@ -5,13 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%PARK_NAME% National Park</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
+    <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css">
+
+    <!-- Custom styles -->
     <link rel="stylesheet" href="../../assets/css/style.css">
+
+    <!-- Map styles -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css"
+          integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+          crossorigin=""/>
 
 <!--    <link rel="icon" type="image/x-icon" href="../assets/img/mount-rainier/icon.png">-->
 </head>
@@ -25,7 +32,7 @@
                 <h1 class="display-5 fw-bold" style="color: %HEX_COLOR%;">%PARK_NAME% National Park</h1>
                 <div class="row">
                     <div class="col-md-9">
-                        <p class="fs-4">%PARK_DESC%<sup><a href="#footer">[1]</a></sup>.</p>
+                        <p class="fs-4">%PARK_DESC%</p>
                         <a href="%PARK_URL%" target="blank" class="btn btn-lg btn-primary">Park Website <i class="fas fa-external-link-alt"></i></a>
                     </div>
                     <div class="col-md-3">
@@ -39,7 +46,7 @@
         <div class="row">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="../..">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">%PARK_NAME%</li>
                 </ol>
             </nav>
@@ -110,20 +117,18 @@
         </div>
 
         <!-- Photos -->
-        <div class="row">
+        <div class="row" id="photos">
             %IMAGE_DIVS%
         </div>
 
         <!-- Location -->
-        <div class="row" id="maps">
-            <h2>Location</h2>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-6">
-                Coming soon
+        <div class="row" id="location">
+            <div class="col-sm-3">
             </div>
             <div class="col-sm-6">
+                <div id="map"></div>
+            </div>
+            <div class="col-sm-3">
             </div>
         </div>
     </div>
@@ -133,8 +138,10 @@
 <div class="container">
     <footer class="d-flex justify-content-between py-3 my-4 border-top" id="footer">
         <div class="col-md-6 text-muted">
-            <a href="../index.html">Return to all parks</a></br>
-            <span style="font-size: 10pt;"><sup>1</sup> <a href="%PARK_URL%" target="blank" class="text-reset">%PARK_URL%</a></span></br>
+            <a href="../..">Return to all parks</a></br>
+            <div style="font-size: 10pt; padding-top: 3pt;">
+                <sup>1</sup> <a href="%PARK_URL%" target="blank" class="text-reset">%PARK_URL%</a></br>
+            </div>
         </div>
         <div class="col-md-4 text-end">
             <span class="text-muted">&copy; 2022 Rohan Nagar</span><br>
@@ -146,6 +153,21 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
+        integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
+        crossorigin=""></script>
+<script>
+    var map = L.map('map').setView([%LATITUDE%, %LONGITUDE%], 13);
+
+    var marker = L.marker([%LATITUDE%, %LONGITUDE%]).addTo(map);
+
+    marker.bindPopup("%PARK_NAME% National Park").openPopup();
+
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '© OpenStreetMap'
+    }).addTo(map);
+</script>
 </body>
 
 </html>
