Link to missing park reporting form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="intro">
             <h2 class="text-center">Parks of the World</h2>
-            <p class="text-center mt-5">Every designated National Park. Missing a park? Report it here.</p>
+            <p class="text-center mt-5">Every designated National Park. Missing a park? Report it <a href="https://github.com/RohanNagar/parksoftheworld/issues/new/choose" target="_blank">here.</a></p>
         </div>
         <div class="row parks">
             <ul class="list-unstyled card-columns" id="park-data">
@@ -45,7 +45,7 @@
         <div class="container">
             <footer class="d-flex justify-content-between py-3 my-4 border-top" id="footer">
                 <div class="col-md-6 text-muted">
-                    <span class="text-muted">Missing parks? Submit a request here.</span><br>
+                    <span class="text-muted">Missing parks? Submit a report <a href="https://github.com/RohanNagar/parksoftheworld/issues/new/choose" target="_blank">here</a>.</span><br>
                 </div>
                 <div class="col-md-4 text-end">
                     <span class="text-muted">&copy; 2022 Rohan Nagar</span><br>
