--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parks | Rohan Nagar</title>
+    <title>Parks of the World</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -21,24 +21,8 @@
             <ul class="list-unstyled card-columns" id="park-data">
             </ul>
         </div>
-        <div class="row map">
-            <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1d_Qmnw6qCsIAtMfibsHZ-EgkP9F23gQ&ehbc=2E312F" width="640" height="680"></iframe>
-        </div>
-
-        <!-- Coming Soon -->
-<!--        <div class="row">-->
-<!--            <h2 class="text-muted ml-2" id="visit">Coming Soon</h2>-->
-<!--        </div>-->
-<!--        <div class="row parks pt-0">-->
-<!--            <div class="col-md-4 col-lg-3 item">-->
-<!--                <div class="card" style="width: 17rem;">-->
-<!--                    <img src="" class="card-img-top" alt="">-->
-<!--                    <div class="card-body">-->
-<!--                        <h5 class="card-title">Saguaro</h5>-->
-<!--                        <p class="card-text">Arizona</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
+<!--        <div class="row map">-->
+<!--            <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1d_Qmnw6qCsIAtMfibsHZ-EgkP9F23gQ&ehbc=2E312F" width="640" height="680"></iframe>-->
 <!--        </div>-->
 
         <!-- Footer -->
