Update links in footer

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                 </div>
                 <div class="col-md-4 text-end">
                     <span class="text-muted">&copy; 2022 Rohan Nagar</span><br>
-                    <span class="text-muted"><a href="https://twitter.com/RohanNagar22" target="blank" class="text-reset"><i class="fab fa-twitter"></i></a></span>
-                    <span class="text-muted"><a href="https://github.com/RohanNagar" target="blank" class="text-reset"><i class="fab fa-github"></i></a></span>
-                    <span class="text-muted"><a href="https://linkedin.com/in/rohannagar" target="blank" class="text-reset"><i class="fab fa-linkedin"></i></a></span>
+                    <span class="text-muted"><a href="https://github.com/RohanNagar/parksoftheworld" target="blank" class="text-reset"><i class="fab fa-github"></i></a></span>
                 </div>
             </footer>
         </div>
