Generate homepage as well

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -19,6 +19,7 @@
         </div>
         <div class="row parks">
             <ul class="list-unstyled card-columns" id="park-data">
+%PARK_LIST%
             </ul>
         </div>
 <!--        <div class="row map">-->
@@ -41,7 +42,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-<script type="module" src="assets/js/park-list.js"></script>
 </body>
 
 </html>
